--- a/index.html
+++ b/index.html
@@ -12,5 +12,31 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <!-- Header Section -->
+    <header>
+      <!-- Navbar Section -->
+      <nav class="container">
+        <div class="navbar">
+          <div class="logo">
+            <h2>Bangladesh 2.0</h2>
+          </div>
+          <div class="sign-in-btn">
+            <button>Sign In</button>
+          </div>
+        </div>
+      </nav>
+      <!-- Hero Section -->
+      <section class="container hero-section">
+        <div class="hero-content">
+          <p>Bangladesh 2.0</p>
+          <h2>Idea , innovation , vision and challenges in New Bangladesh.</h2>
+          <button>Explore New Bangladesh</button>
+        </div>
+        <div class="hero-img">
+          <img src="assets/hero.png" alt="" />
+        </div>
+      </section>
+    </header>
+  </body>
 </html>
