pillar section completed

--- a/index.html
+++ b/index.html
@@ -38,5 +38,48 @@
         </div>
       </section>
     </header>
+    <!-- Main Section -->
+    <main class="container">
+      <!-- Pillar Section -->
+      <div class="pillar-container">
+        <div class="pillar-heading">
+          <h2>Pillars of "Bangladesh 2.0"</h2>
+        </div>
+        <div class="pillar-cards">
+          <div class="pillar-card">
+            <img src="assets/card-icon.png" alt="" />
+            <h2>Innovation</h2>
+            <p>
+              Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+              sequi quos
+            </p>
+          </div>
+          <div class="pillar-card">
+            <img src="assets/card-icon.png" alt="" />
+            <h2>Sustainability</h2>
+            <p>
+              Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+              sequi quos
+            </p>
+          </div>
+          <div class="pillar-card">
+            <img src="assets/card-icon.png" alt="" />
+            <h2>Infrastructure</h2>
+            <p>
+              Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+              sequi quos
+            </p>
+          </div>
+          <div class="pillar-card">
+            <img src="assets/card-icon.png" alt="" />
+            <h2>Empowerment</h2>
+            <p>
+              Dolor sit amet consectetur elit. Facilis quas, ducimus labore
+              sequi quos
+            </p>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
