--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Main Section -->
     <main class="container">
       <!-- Pillar Section -->
-      <div class="pillar-container">
+      <section class="pillar-container">
         <div class="pillar-heading">
           <h2>Pillars of "Bangladesh 2.0"</h2>
         </div>
@@ -79,7 +79,49 @@
             </p>
           </div>
         </div>
-      </div>
+      </section>
+      <!-- Future Vision Section -->
+      <section class="future-vision">
+        <div class="future-vision-content">
+          <h2>The Vision of Future</h2>
+          <p>
+            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+            cutting-edge technology, promoting inclusive growth, and ensuring
+            sustainability. With initiatives in renewable energy, digital
+            transformation, and robust infrastructure, the country is set to
+            become a global model of development.
+          </p>
+        </div>
+        <div class="future-vision-cards">
+          <div class="future-vision-card-1">
+            <img src="assets/card-icon.png" alt="" />
+            <h2>Digital Transformation</h2>
+            <p>
+              Creating a nationwide digital ecosystem to enhance connectivity
+              and access to services for all citizens.
+            </p>
+            <button>Learn More</button>
+          </div>
+          <div class="future-vision-card-2">
+            <img src="assets/card-icon.png" alt="" />
+            <h2>Green Energy</h2>
+            <p>
+              Investments in solar and wind energy to ensure a sustainable and
+              eco-friendly future.
+            </p>
+            <button>Learn More</button>
+          </div>
+          <div class="future-vision-card-3">
+            <img src="assets/card-icon.png" alt="" />
+            <h2>Modern Infrastructure</h2>
+            <p>
+              Building state-of-the-art infrastructure to support economic
+              growth and global competitiveness.
+            </p>
+            <button>Learn More</button>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
