--- a/index.html
+++ b/index.html
@@ -139,6 +139,41 @@
           <p>Chief Adviser of the People's Republic of Bangladesh</p>
         </div>
       </section>
+      <!-- Donate Section -->
+      <section class="donate-section">
+        <div class="donate-heading">
+          <h3>Donate Today</h3>
+          <p>
+            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+            cutting-edge technology, promoting inclusive growth, and ensuring
+            sustainability. With initiatives in renewable energy, digital
+            transformation, and robust infrastructure.
+          </p>
+        </div>
+        <div class="donate-money">
+          <div class="money1">
+            <button>100 Taka</button>
+          </div>
+          <div class="money2">
+            <button>200 Taka</button>
+          </div>
+          <div class="money3">
+            <button>500 Taka</button>
+          </div>
+          <div class="money4">
+            <button>1000 Taka</button>
+          </div>
+        </div>
+        <div class="donate-amount">
+          <input
+            type="text"
+            name="donation-amount"
+            id="donation-amount"
+            placeholder="Other Amount (Taka)"
+          />
+          <button>Done Now</button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
