--- a/index.html
+++ b/index.html
@@ -174,6 +174,28 @@
           <button>Done Now</button>
         </div>
       </section>
+      <!-- Newsletter Section -->
+      <section class="newletter-section">
+        <div class="newletter-content">
+          <div class="newletter-heading">
+            <h2>Subscribe Newsletter</h2>
+            <p>
+              Bangladesh 2.0 aims to redefine the nation’s trajectory by
+              embracing cutting-edge technology, promoting inclusive growth.
+            </p>
+          </div>
+          <div class="newletter-input">
+            <input
+              type="text"
+              name=""
+              id=""
+              placeholder="Enter your email here"
+            />
+            <button>Subscribe</button>
+          </div>
+          <p>We promise not to spam you!</p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
