footer completed and project done

--- a/index.html
+++ b/index.html
@@ -197,5 +197,18 @@
         </div>
       </section>
     </main>
+    <!-- Footer Section -->
+    <footer>
+      <div class="footer-container">
+        <div class="footer-heading">
+          <h3>Bangladesh 2.0</h3>
+        </div>
+        <div class="footer-images">
+          <img src="assets/facebook.png" alt="" />
+          <img src="assets/instagram.png" alt="" />
+          <img src="assets/x.png" alt="" />
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
